# pre_gz

./: CLAUDE_STRUCTURE.md  DEPLOYMENT_SHELL.md  NEW_DEPLOYMENT_SHELL.md  README.md  auth-config.json  deploy_script.sh  migration_script.py
api_testing/: api_gwin_robust.py  api_gwin_test.py  api_test.ipynb  pyproject.toml
govwin-dashboard/: .dockerignore  Dockerfile  indexing-policy.json  migrate-data-model.js  migrate-relevant-data.js  migrate-to-id-partition.js  next.config.ts  package-lock.json  package.json  postcss.config.mjs
govwin-dashboard/src/app/: layout.tsx
govwin-dashboard/src/app/dashboard/: page.tsx
govwin-dashboard/src/app/saved/: page.tsx
govwin-dashboard/src/app/socket/: route.ts
govwin-dashboard/src/components/auth/: auth-guard.tsx  login-page.tsx
govwin-dashboard/src/contexts/: websocket-context.tsx
govwin-dashboard/src/hooks/: use-filters.ts  use-opportunities.ts  use-opportunity-stats.ts  use-ui-pagination.ts  use-user-actions.ts  use-websocket.ts  useRealTime.ts
govwin-dashboard/src/lib/: auth-config.ts  cosmos.ts  pubsub-server.ts  query-filters.ts  test-cosmos.ts  types.ts  websocker-server.ts  websocket-client.ts  websocket-types.ts
govwin-dashboard/src/types/: env.d.ts
govwin-ingest/: copy-data.js  example_records.txt  func_fallback_testing.py  function_app.py  package-lock.json  package.json  requirements.txt  search_terms.txt
streamlit/: Dockerfile  app.py  cards.py  cards_fallback.py  dashboard.py  data_access.py  old_test_db.py  pyproject.toml  requirements.txt  test_cosmos.py
(+18 files in other folders)
